--- a/tex/resume.tex
+++ b/tex/resume.tex
@@ -1,4 +1,6 @@
-
+\selectlanguage{french}
 
 \vspace{0.5cm}
 Mots clés: géométrie algorithmique, complexe planaire et rectangulaire, géodésique, courbure globale non-positive
+
+\selectlanguage{english}
