--- a/tex/annexe1.tex
+++ b/tex/annexe1.tex
@@ -1,177 +1,5 @@
-\section{Intitulés des doctorats AMU}
+\setchapterstyle{lines}
+\labpage{appendix}
 
-		\begin{itemize}
-		\item Discipline
-			\begin{itemize}
-			\item Spécialité
-			\end{itemize}
-		\end{itemize}
-		
-	\subsection*{ED 62 SCIENCES DE LA VIE ET DE LA SANTE}\label{ed-62-sciences-de-la-vie-et-de-la-sante}
-
-		\begin{itemize}
-		\item Biologie santé
-			\begin{itemize}
-			\item Biochimie structurale
-			\item Génomique et  Bioinformatique
-			\item Biologie du développement
-			\item Immunologie
-			\item Génétique
-			\item Microbiologie
-			\item Biologie végétale
-			\item Neurosciences
-			\item Oncologie
-			\item Maladies infectieuses
-			\item Pathologie vasculaire et nutrition
-			\item Ethique
-			\item Recherche clinique et Santé Publique
-			\item Biotechnologie
-			\end{itemize}
-		\end{itemize}
-
-	\subsection*{ED 67 SCIENCES JURIDIQUES ET POLITIQUES}\label{ed-67-sciences-juridiques-et-politiques}
-
-		\begin{itemize}
-		\item Droit
-			\begin{itemize}
-			\item Droit Privé
-			\item Droit Public
-			\item Histoire du Droit
-			\end{itemize}
-		\item Science Politique
-		\end{itemize}
-
-	\subsection*{ED 184 MATHEMATIQUES ET INFORMATIQUE}\label{ed-184-mathematiques-et-informatique}
-
-		\begin{itemize}
-		\item Mathématiques
-		\item Informatique
-		\item Automatique
-		\end{itemize}
-
-	\subsection*{ED 250 SCIENCES CHIMIQUES DE MARSEILLE}\label{ed-250-sciences-chimiques-de-marseille}
-
-		\begin{itemize}
-		\item Sciences Chimiques
-		\end{itemize}
-
-	\subsection*{ED 251 SCIENCES DE L'ENVIRONNEMENT}\label{ed-251-sciences-de-lenvironnement}
-
-		\begin{itemize}
-		\item Sciences de l'Environnement
-			\begin{itemize}
-			\item Anthropologie biologique
-			\item Ecologie
-			\item Géosciences 
-			\item Génie des procédés
-			\item Océanographie
-			\item Chimie 
-			\item Environnement et santé 
-			\end{itemize}
-		\end{itemize}
-
-	\subsection*{ED 352 PHYSIQUE ET SCIENCES DE LA MATIERE}\label{ed-352-physique-et-sciences-de-la-matiere}
-
-		\begin{itemize}
-		\item Physique et Sciences de la Matière 
-			\begin{itemize}
-			\item Astrophysique et Cosmologie
-			\item Biophysique
-			\item Energie, Rayonnement et Plasma
-			\item Instrumentation
-			\item Optique, Photonique et Traitement d'Image
-			\item Physique des Particules et Astroparticules
-			\item Physique Théorique et Mathématique
-			\item Matière Condensée et Nanosciences 
-			\end{itemize}
-		\end{itemize}
-
-	\subsection*{ED 353 SCIENCES POUR L'INGENIEUR: MECANIQUE, PHYSIQUE, MICRO ET NANOELECTRONIQUE}\label{ed-353-sciences-pour-lingenieur-mecanique-physique-micro-et-nanoelectronique}
-
-		\begin{itemize}
-		\item Sciences pour l'Ingénieur
-			\begin{itemize}
-			\item Energétique
-			\item Mécanique et physique des fluides 
-			\item Acoustique
-			\item Mécanique des solides
-			\item Micro et Nanoélectronique
-			\item Génie civil et architecture
-			\item Nucléaire de fission 
-			\item Fusion magnétique
-			\end{itemize}
-		\end{itemize}
-
-	\subsection*{ED 354 LANGUES, LETTRES ET ARTS}\label{ed-354-langues-lettres-et-arts}
-
-		\begin{itemize}
-		\item Etudes anglophones
-		\item Etudes germaniques
-		\item Etudes slaves
-		\item Langues et littératures d'Asie
-			\begin{itemize}
-			\item Chinois
-			\item Vietnamien
-			\item Coréen
-			\end{itemize}
-        	\item Arts
-            		\begin{itemize}
-            		\item Arts plastiques 
-            		\item Sciences de l’art
-            		\item Musique et musicologie
-            		\item Etudes cinématographiques et audiovisuelles
-            		\item Arts de la scène
-            		\item Médiation culturelle des arts
-            		\end{itemize}
-        	\item Pratique et théorie de la création artistique et littéraire
-		\item Langue et Littératures françaises
-		\item Littérature générale et comparée
-		\item Langues, littératures et civilisations romanes 
-			\begin{itemize}
-			\item Etudes hispaniques et latino-américaines
-			\item Etudes italiennes
-			\item Etudes roumaines
-			\end{itemize}
-		\end{itemize}
-
-	\subsection*{ED 355 ESPACES, CULTURES, SOCIETES}\label{ed-355-espaces-cultures-societes}
-
-		\begin{itemize}
-		\item Géographie
-		\item Urbanisme et Aménagement du territoire
-		\item Préhistoire
-		\item Archéologie
-		\item Histoire de l’Art
-		\item Histoire
-		\item Sciences de l'Antiquité
-		\item Mondes arabe, musulman et sémitique
-		\item Etudes romanes
-		\item Sociologie
-		\item Anthropologie
-		\item Architecture
-		\item Cultures et Sociétés d'Asie
-		\end{itemize}
-
-	\subsection*{ED 356 COGNITION, LANGAGE, EDUCATION}\label{ed-356-cognition-langage-education}
-
-		\begin{itemize}
-		\item Philosophie
-		\item Psychologie
-		\item Sciences du Langage
-		\item Sciences de l’Information et de la Communication
-		\item Sciences de l’Education
-		\item Sciences Cognitives
-		\end{itemize}
-
-	\subsection*{ED 372 SCIENCES ECONOMIQUES ET DE GESTION}\label{ed-372-sciences-economiques-et-de-gestion}
-
-		\begin{itemize}
-		\item Sciences de Gestion
-		\item Sciences Economiques
-		\end{itemize}
-
-	\subsection*{ED 463 SCIENCES DU MOUVEMENT HUMAIN}\label{ed-463-sciences-du-mouvement-humain}
-
-		\begin{itemize}
-		\item Sciences du Mouvement Humain 
-		\end{itemize}
+\chapter{Appendix 1}
+\section{Section 1}
