--- a/tex/chap1.tex
+++ b/tex/chap1.tex
@@ -1,4 +1,7 @@
 % controlled fusion and RF heating and current drive
-\chaptertoc{}
+%\chaptertoc{}
 
-\section{}
+\chapter{Controlled Fusion, RF heating and Current Drive}
+\section{Controlled Fusion}
+
+\section{RF H and CD}
