--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -1,1 +1,12 @@
-introduction
+\setchapterstyle{kao}
+\setchapterpreamble[u]{\margintoc}
+\chapter{Introduction}
+\labch{intro}
+
+\section{Nuclear Fusion}
+bla bla
+
+\sidecite{Faria2008}
+
+\section{Heating and current drive}
+bla bla
