--- a/tex/resume.tex
+++ b/tex/resume.tex
@@ -1,6 +1,8 @@
-\selectlanguage{french}
+\chapter*{Summary}
+Summary and keywords
+%\selectlanguage{french}
 
-\vspace{0.5cm}
-Mots clés: géométrie algorithmique, complexe planaire et rectangulaire, géodésique, courbure globale non-positive
+%\vspace{0.5cm}
+%Mots clés: géométrie algorithmique, complexe planaire et rectangulaire, géodésique, courbure globale non-positive
 
-\selectlanguage{english}
+%\selectlanguage{english}
