--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -3,10 +3,7 @@
 \chapter{Introduction}
 \labch{intro}
 
-\section{Nuclear Fusion}
+\section{Energy}
 bla bla
 
-\sidecite{Faria2008}
-
-\section{Heating and current drive}
-bla bla
+\sidecite{Semenov2007a}
