--- a/styles/kaobiblio.sty
+++ b/styles/kaobiblio.sty
@@ -29,6 +29,7 @@
 % Choose the default options, which will be overwritten by the options passed to this package.
 \PassOptionsToPackage{
 	%style=numeric-comp,
+	%style=numeric-comp,
 	%citestyle=authortitle-icomp,
 	citestyle=numeric-comp,
 	%bibstyle=authoryear,
@@ -70,14 +71,17 @@
 %	BACK REFERENCES
 %----------------------------------------------------------------------------------------
 
+% Check if a string is in a comma-separated list
+\newcommand\IfStringInList[2]{\IfSubStr{,#2,}{,#1,}}
+
 % Set the back reference strings
-\iflanguage{english}{
+\IfStringInList{english}{\bbl@loaded}{
 	\DefineBibliographyStrings{english}{%
 		backrefpage = {cited on page},
 		backrefpages = {cited on pages},
 	}
 }{}
-\iflanguage{italian}{
+\IfStringInList{italian}{\bbl@loaded}{
 	\DefineBibliographyStrings{italian}{%
 		backrefpage = {citato a pag.},
 		backrefpages = {citato a pagg.},
@@ -101,9 +105,13 @@
 
 % Command to format the marginnote created for cited items
 \NewDocumentCommand{\formatmargincitation}{m}{% The parameter is a single citation key
-	\parencite{#1}: \citeauthor*{#1} (\citeyear{#1}), \citetitle{#1}\\
+	\parencite{#1}: \citeauthor*{#1} (\citeyear{#1})\\%, \citetitle{#1}\\
 }
 
+
+\NewDocumentCommand{\citeauthyear}{m}{
+	\citeauthor*{#1} (\citeyear{#1})~\parencite{#1}
+}
 %----------------------------------------------------------------------------------------
 %	CITATION ENVIRONMENTS
 %----------------------------------------------------------------------------------------
