--- a/master.tex
+++ b/master.tex
@@ -1,7 +1,7 @@
 \documentclass[
 fontsize=10pt, % Base font size
 twoside=true, % Use different layouts for even and odd pages (in particular, if twoside=true, the margin column will be always on the outside)
-%open=any, % If twoside=true, uncomment this to force new chapters to start on any page, not only on right (odd) pages
+open=any, % If twoside=true, uncomment this to force new chapters to start on any page, not only on right (odd) pages
 %chapterprefix=true, % Uncomment to use the word "Chapter" before chapter numbers everywhere they appear
 %chapterentrydots=true, % Uncomment to output dots from the chapter name to the page number in the table of contents
 numbers=noenddot, % Comment to output dots after chapter numbers; the most common values for this option are: enddot, noenddot and auto (see the KOMAScript documentation for an in-depth explanation)
@@ -14,22 +14,46 @@ numbers=noenddot, % Comment to output dots after chapter numbers; the most commo
 \usepackage[english]{babel} % Load characters and hyphenation
 \usepackage[english=british]{csquotes}	% English quotes
 
-% Load the bibliography package
-\usepackage{styles/kaobiblio}
-\addbibresource{HDR.bib} % Bibliography file
-
-% Load mathematical packages for theorems and related environments. NOTE: choose only one between 'mdftheorems' and 'plaintheorems'.
-\usepackage{styles/mdftheorems}
-%\usepackage{styles/plaintheorems}
-
 % Paths in which to look for images
 \graphicspath{{figures/}{./}} 
+
+% Load the bibliography package and pass it some options
+\usepackage[sorting=none,
+			sortcites=true,
+			citestyle=numeric-comp,
+			bibstyle=authoryear]{styles/kaobiblio}
+\addbibresource{HDR.bib} % Bibliography file
+%\addbibresource{first_author_papers.bib}
+
+% Use the "none" sorting for the document
+\assignrefcontextentries[]{*}
+
+%% Redefine the citation style: use bracket like [i-ii]
+%\RenewDocumentCommand{\formatmargincitation}{m}{
+%	\parencite{#1}: \citeauthor*{#1} (\citeyear{#1})\\
+%}
+
+% Redefine the citation style: uses numbered sidenotes (upperscript)
+\RenewDocumentCommand{\formatmargincitation}{m}{%
+	\supercite{#1} \citeauthor*{#1} (\citeyear{#1})\\
+}
+
+\RenewDocumentCommand{\sidecite}{m}{%
+	\supercite{#1}%
+	\margincitation{#1}%
+}
+
+% Citing author and date in the text 
+\NewDocumentCommand{\citeauthyear}{m}{%
+	\citeauthor*{#1} (\citeyear{#1})
+}
 
 %\makeindex[columns=3, title=Alphabetical Index, intoc] % Make LaTeX produce the files required to compile the index
 
 %\makeglossaries % Make LaTeX produce the files required to compile the glossary
 
 %\makenomenclature % Make LaTeX produce the files required to compile the nomenclature
+
 
 %----------------------------------------------------------------------------------------
 
@@ -134,31 +158,31 @@ numbers=noenddot, % Comment to output dots after chapter numbers; the most commo
 	
 	\mainmatter % Denotes the start of the main document content, resets page numbering and uses arabic numbers
 	
-	\input{tex/intro.tex}
-	
-	% % Page avec titre seul
-	%\pagelayout{wide} % No margins
-	%\addpart{intro}
-	%\pagelayout{margin} % Restore margins
-	
+%	\input{tex/intro.tex}
+%	
+%	% % Page avec titre seul
+%	%\pagelayout{wide} % No margins
+%	%\addpart{intro}
+%	%\pagelayout{margin} % Restore margins
+%	
 	\input{tex/chap1.tex}
-	
-	\input{tex/chap2.tex}
-	
-	\input{tex/chap3.tex}
-	
-	\input{tex/chap4.tex}
-	
-	%----------------------------APPENDIX------------------------------------------------------------
+%	
+%	\input{tex/chap2.tex}
+%	
+%	\input{tex/chap3.tex}
+%	
+%	\input{tex/chap4.tex}
+%	
+%	%----------------------------APPENDIX------------------------------------------------------------
 	\appendix % From here onwards, chapters are numbered with letters, as is the appendix convention
 	
 	\pagelayout{wide} % No margins
 	\addpart{Appendix}
 	\pagelayout{margin} % Restore margins
-	
-	\input{tex/annexe1.tex}
-	
-	\input{tex/annexe2.tex}
+%	
+%	\input{tex/annexe1.tex}
+%	
+%	\input{tex/annexe2.tex}
 	
 	%----------------------------------------------------------------------------------------
 	
@@ -172,8 +196,14 @@ numbers=noenddot, % Comment to output dots after chapter numbers; the most commo
 	
 	% The bibliography needs to be compiled with biber using your LaTeX editor, or on the command line with 'biber main' from the template directory
 	
-	\defbibnote{bibnote}{Here are the references in citation order.\par\bigskip} % Prepend this text to the bibliography
-	\printbibliography[heading=bibintoc, title=Bibliography, prenote=bibnote] % Add the bibliography heading to the ToC, set the title of the bibliography and output the bibliography note
+	% Use the "nyt" sorting for the bibliography
+	\defbibnote{bibnote}{Here are the references in alphabetical order.\par\bigskip} % Prepend this text to the bibliography
+	\begin{refcontext}[sorting=nyt]
+		\printbibliography[heading=bibintoc, title=Bibliography, prenote=bibnote] 
+	\end{refcontext}
+
+	%\section{1st Author Publications}
+	%\nocite{*}
 	
 %	%----------------------------------------------------------------------------------------
 %	%	NOMENCLATURE
