--- a/master.tex
+++ b/master.tex
@@ -22,8 +22,9 @@ numbers=noenddot, % Comment to output dots after chapter numbers; the most commo
 			sortcites=true,
 			citestyle=numeric-comp,
 			bibstyle=authoryear]{styles/kaobiblio}
-\addbibresource{HDR.bib} % Bibliography file
-%\addbibresource{first_author_papers.bib}
+% Bibliography files
+\addbibresource{HDR.bib}
+%\addbibresource{references.bib}
 
 % Use the "none" sorting for the document
 \assignrefcontextentries[]{*}
@@ -202,9 +203,6 @@ numbers=noenddot, % Comment to output dots after chapter numbers; the most commo
 		\printbibliography[heading=bibintoc, title=Bibliography, prenote=bibnote] 
 	\end{refcontext}
 
-	%\section{1st Author Publications}
-	%\nocite{*}
-	
 %	%----------------------------------------------------------------------------------------
 %	%	NOMENCLATURE
 %	%----------------------------------------------------------------------------------------
